--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "author": "Clarisse Bouy",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
-    "mongoose": "^7.2.2"
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.2.2",
+    "mongoose-unique-validator": "^4.0.0"
   }
 }
