gram modification of env variables

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-#secret jwt token variable is
-jwt_TOKEN
+#secret JWT variable is
+JWT_TOKEN
 
 #mongoose connexion string variable is
-CONNEXION_STRING
+CONNECTION_STRING
