gram modification of env variables

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 #secret JWT variable is
 JWT_TOKEN
 
-#mongoose connexion string variable is
+#mongoose connection string variable is
 CONNECTION_STRING
